# indexium

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  app.py  auto_deploy.sh  config.py  e2e_test.py  future_ideas.md  metadata_services.py  nfo_services.py  pyproject.toml  scanner.py  signal_handler.py  smart_metadata_management_feature.md  text_utils.py  type_defs.py  type_fix_plans.md  util.py
.beads/: issues.jsonl
.serena/: project.yml
.serena/memories/: architecture.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
blueprints/: people_bp.py  tagging_bp.py
docs/: jellyfin-nfo-metadata.md
docs/plans/: 2026-01-08-linear-ui-implementation.md  2026-01-08-linear-ui-redesign.md  2026-01-24-nfo-metadata-design.md  2026-01-24-nfo-metadata-implementation.md  2026-01-25-concatenated-name-matching-design.md
scripts/: indexium_config_check.py  indexium_db_stats.sql  indexium_migrate_nfo_actor_sources.py  indexium_set_manual_review_status.py
templates/: all_done.html  base.html  group_tagger.html  metadata_history.html  metadata_preview.html  metadata_progress.html  people_list.html  person_detail.html  video_manual_detail.html  video_manual_list.html
test_vids/: 100546-video-720.nfo  100763-video-720.nfo  100765-video-720.nfo  100793-video-720.nfo  101172-video-720.nfo  ForBiggerBlazes.nfo  John_Smith.nfo  mixkit-girl-reading-a-book-in-nature-4897-hd-ready.nfo  mixkit-men-coming-to-play-soccer-football-4567-hd-ready.nfo  mixkit-pov-flipping-through-a-newspaper-41192-hd-ready.nfo  mixkit-stock-market-information-online-47213-hd-ready.nfo
tests/: conftest.py  test_app.py  test_config.py  test_e2e.py  test_e2e_ui.py  test_metadata_services.py  test_metadata_writer.py  test_nfo_services.py  test_scanner.py  test_signal_handler.py  test_text_utils.py  test_util.py
tests/fixtures/nfo/: empty_actors.nfo  existing_actors.nfo  indexium_actors.nfo  malformed.nfo  mixed_actors.nfo
typings/easyocr/: __init__.pyi
typings/face_recognition/: __init__.pyi
typings/ffmpeg/: __init__.pyi
typings/pytesseract/: __init__.pyi
