[project]
name = "indexium"
version = "0.1.0"
description = "A video face scanning and tagging application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "face-recognition==1.3.0",
    "face-recognition-models",
    "ffmpeg-python==0.2.0",
    "flask==3.0.3",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pytest>=8.4.1",
    "scikit-learn==1.5.0",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
