[project]
name = "indexium"
version = "0.1.0"
description = "A video face scanning and tagging application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "face-recognition==1.3.0",
    "face-recognition-models",
    "ffmpeg-python==0.2.0",
    "flask==3.0.3",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pillow>=10.3.0",
    "python-dotenv>=1.0.1",
    "pytesseract>=0.3.10",
    "pytest>=8.4.1",
    "scikit-learn==1.5.0",
    "setuptools>=80.9.0",
    "playwright>=1.57.0",
]

[project.optional-dependencies]
dev = ["pyright>=1.1.389", "ruff>=0.8.0", "pytest-cov>=6.0.0"]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Import order in e2e_test.py is significant for pytest module caching behavior
"e2e_test.py" = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUntypedFunctionDecorator = true
reportUntypedBaseClass = true
exclude = [
    "thumbnails",
    "test_vids",
    ".venv",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "e2e_test.py",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
